Fixed layout shift & collapsed UI due to sport section switch with different sections.

--- a/styles/main.css
+++ b/styles/main.css
@@ -267,6 +267,11 @@ footer {
     color: #777;
 }
 
+#fixtures-container,
+#motorsport-card-container {
+    min-height: 70vh;
+}
+
 .empty-state {
     display: flex;
     flex-direction: column;
